@@ -208,37 +208,27 @@ public abstract class BspService<I extends WritableComparable,
   /** Private ZooKeeper instance that implements the service */
   private final ZooKeeperExt zk;
   /** Has the Connection occurred? */
-  private final BspEvent connectedEvent = new PredicateLock();
+  private final BspEvent connectedEvent;
   /** Has worker registration changed (either healthy or unhealthy) */
-  private final BspEvent workerHealthRegistrationChanged =
-      new PredicateLock();
+  private final BspEvent workerHealthRegistrationChanged;
   /** InputSplits are ready for consumption by workers */
-  private final BspEvent inputSplitsAllReadyChanged =
-      new PredicateLock();
+  private final BspEvent inputSplitsAllReadyChanged;
   /** InputSplit reservation or finished notification and synchronization */
-  private final BspEvent inputSplitsStateChanged =
-      new PredicateLock();
+  private final BspEvent inputSplitsStateChanged;
   /** InputSplits are done being processed by workers */
-  private final BspEvent inputSplitsAllDoneChanged =
-      new PredicateLock();
+  private final BspEvent inputSplitsAllDoneChanged;
   /** InputSplit done by a worker finished notification and synchronization */
-  private final BspEvent inputSplitsDoneStateChanged =
-      new PredicateLock();
+  private final BspEvent inputSplitsDoneStateChanged;
   /** Are the partition assignments to workers ready? */
-  private final BspEvent partitionAssignmentsReadyChanged =
-      new PredicateLock();
+  private final BspEvent partitionAssignmentsReadyChanged;
   /** Application attempt changed */
-  private final BspEvent applicationAttemptChanged =
-      new PredicateLock();
+  private final BspEvent applicationAttemptChanged;
   /** Superstep finished synchronization */
-  private final BspEvent superstepFinished =
-      new PredicateLock();
+  private final BspEvent superstepFinished;
   /** Master election changed for any waited on attempt */
-  private final BspEvent masterElectionChildrenChanged =
-      new PredicateLock();
+  private final BspEvent masterElectionChildrenChanged;
   /** Cleaned up directory children changed*/
-  private final BspEvent cleanedUpChildrenChanged =
-      new PredicateLock();
+  private final BspEvent cleanedUpChildrenChanged;
   /** Registered list of BspEvents */
   private final List<BspEvent> registeredBspEvents =
       new ArrayList<BspEvent>();
@@ -284,6 +274,18 @@ public abstract class BspService<I extends WritableComparable,
       int sessionMsecTimeout,
       Mapper<?, ?, ?, ?>.Context context,
       GraphMapper<I, V, E, M> graphMapper) {
+    this.connectedEvent = new PredicateLock(context);
+    this.workerHealthRegistrationChanged = new PredicateLock(context);
+    this.inputSplitsAllReadyChanged = new PredicateLock(context);
+    this.inputSplitsStateChanged = new PredicateLock(context);
+    this.inputSplitsAllDoneChanged = new PredicateLock(context);
+    this.inputSplitsDoneStateChanged = new PredicateLock(context);
+    this.partitionAssignmentsReadyChanged = new PredicateLock(context);
+    this.applicationAttemptChanged = new PredicateLock(context);
+    this.superstepFinished = new PredicateLock(context);
+    this.masterElectionChildrenChanged = new PredicateLock(context);
+    this.cleanedUpChildrenChanged = new PredicateLock(context);
+
     registerBspEvent(connectedEvent);
     registerBspEvent(workerHealthRegistrationChanged);
     registerBspEvent(inputSplitsAllReadyChanged);
